chart bugs unsolved

--- a/index.html
+++ b/index.html
@@ -34,36 +34,43 @@
           <div class="expenses__stats__heading">Spending - Last 7 days</div>
           <div class="expenses__stats__chart">
             <div class="expenses__item">
+              <span class="expenses__item__label"></span>
               <div class="expenses__item__bar"></div>
               <div class="expenses__item__day">mon</div>
             </div>
 
             <div class="expenses__item">
+              <span class="expenses__item__label"></span>
               <div class="expenses__item__bar"></div>
               <div class="expenses__item__day">tue</div>
             </div>
 
             <div class="expenses__item">
-              <div class="expenses__item__bar"></div>
+              <span class="expenses__item__label"></span>
+              <div class="expenses__item__bar expenses__item__bar--today"></div>
               <div class="expenses__item__day">wed</div>
             </div>
 
             <div class="expenses__item">
+              <span class="expenses__item__label"></span>
               <div class="expenses__item__bar"></div>
               <div class="expenses__item__day">thu</div>
             </div>
 
             <div class="expenses__item">
+              <span class="expenses__item__label"></span>
               <div class="expenses__item__bar"></div>
               <div class="expenses__item__day">fri</div>
             </div>
 
             <div class="expenses__item">
+              <span class="expenses__item__label"></span>
               <div class="expenses__item__bar"></div>
               <div class="expenses__item__day">sat</div>
             </div>
 
             <div class="expenses__item">
+              <span class="expenses__item__label"></span>
               <div class="expenses__item__bar"></div>
               <div class="expenses__item__day">sun</div>
             </div>
@@ -82,5 +89,6 @@
         </div>
       </section>
     </main>
+    <script src="./src/script.js"></script>
   </body>
 </html>
