--- a/index.html
+++ b/index.html
@@ -34,44 +34,58 @@
           <div class="expenses__stats__heading">Spending - Last 7 days</div>
           <div class="expenses__stats__chart">
             <div class="expenses__item">
-              <span class="expenses__item__label"></span>
-              <div class="expenses__item__bar"></div>
+              <div class="expenses__item__container">
+                <span class="expenses__item__label"></span>
+                <div class="expenses__item__bar"></div>
+              </div>
               <div class="expenses__item__day">mon</div>
             </div>
 
             <div class="expenses__item">
-              <span class="expenses__item__label"></span>
-              <div class="expenses__item__bar"></div>
+              <div class="expenses__item__container">
+                <span class="expenses__item__label"></span>
+                <div class="expenses__item__bar"></div>
+              </div>
               <div class="expenses__item__day">tue</div>
             </div>
 
             <div class="expenses__item">
-              <span class="expenses__item__label"></span>
-              <div class="expenses__item__bar expenses__item__bar--today"></div>
+              <div class="expenses__item__container">
+                <span class="expenses__item__label"></span>
+                <div class="expenses__item__bar"></div>
+              </div>
               <div class="expenses__item__day">wed</div>
             </div>
 
             <div class="expenses__item">
-              <span class="expenses__item__label"></span>
-              <div class="expenses__item__bar"></div>
+              <div class="expenses__item__container">
+                <span class="expenses__item__label"></span>
+                <div class="expenses__item__bar"></div>
+              </div>
               <div class="expenses__item__day">thu</div>
             </div>
 
             <div class="expenses__item">
-              <span class="expenses__item__label"></span>
-              <div class="expenses__item__bar"></div>
+              <div class="expenses__item__container">
+                <span class="expenses__item__label"></span>
+                <div class="expenses__item__bar"></div>
+              </div>
               <div class="expenses__item__day">fri</div>
             </div>
 
             <div class="expenses__item">
-              <span class="expenses__item__label"></span>
-              <div class="expenses__item__bar"></div>
+              <div class="expenses__item__container">
+                <span class="expenses__item__label"></span>
+                <div class="expenses__item__bar"></div>
+              </div>
               <div class="expenses__item__day">sat</div>
             </div>
 
             <div class="expenses__item">
-              <span class="expenses__item__label"></span>
-              <div class="expenses__item__bar"></div>
+              <div class="expenses__item__container">
+                <span class="expenses__item__label"></span>
+                <div class="expenses__item__bar"></div>
+              </div>
               <div class="expenses__item__day">sun</div>
             </div>
           </div>
